# navegador

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CALLIOPE.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  bootstrap.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release-binaries.yml
api/analysis/: index.html
api/graph/: index.html
api/ingestion/: index.html
api/mcp/: index.html
api/sdk/: index.html
architecture/graph-schema/: index.html
architecture/overview/: index.html
docs/: index.md
docs/api/: analysis.md  graph.md  ingestion.md  mcp.md  sdk.md
docs/architecture/: graph-schema.md  overview.md
docs/assets/css/: custom.css
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: agent-hooks.md  analysis.md  ci-cd.md  cluster.md  context-loading.md  framework-enrichment.md  graph-queries.md  ingestion.md  intelligence.md  mcp-integration.md  planopticon.md  sdk.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/agent-hooks/: index.html
guide/analysis/: index.html
guide/ci-cd/: index.html
guide/cluster/: index.html
guide/context-loading/: index.html
guide/framework-enrichment/: index.html
guide/graph-queries/: index.html
guide/ingestion/: index.html
guide/intelligence/: index.html
guide/mcp-integration/: index.html
guide/planopticon/: index.html
guide/sdk/: index.html
hooks/: NAVEGADOR.md  bootstrap.sh  claude-hook.py  gemini-hook.py  openai-hook.py  openai-tools.json
navegador/: __init__.py  adr.py  api_schema.py  churn.py  cicd.py  codeowners.py  completions.py  config.py  dependencies.py  diff.py  editor.py  federation.py  history.py  lenses.py  llm.py  monorepo.py  multirepo.py  planopticon_pipeline.py  pm.py  refactor.py  sdk.py  security.py  submodules.py  taskpack.py  vcs.py  wiki_sync.py
navegador/analysis/: __init__.py  crossrepo.py  cycles.py  deadcode.py  diffgraph.py  drift.py  flow.py  impact.py  release.py  review.py  testmap.py
navegador/cli/: commands.py
navegador/cluster/: __init__.py  checkpoint.py  core.py  fossil_live.py  locking.py  messaging.py  observability.py  partitioning.py  pubsub.py  sessions.py  shards.py  taskqueue.py
navegador/context/: __init__.py  loader.py
navegador/enrichment/: __init__.py  base.py  chef.py  django.py  express.py  fastapi.py  laravel.py  rails.py  react.py  react_native.py  spring.py  terraform.py
navegador/explorer/: __init__.py  server.py  templates.py
navegador/graph/: __init__.py  export.py  interchange.py  migrations.py  queries.py  schema.py  store.py
navegador/ingestion/: __init__.py  ansible.py  bash.py  c.py  cpp.py  csharp.py  fossil.py  go.py  hcl.py  java.py  knowledge.py  kotlin.py  markdown.py  memory.py  optimization.py  parser.py  php.py  planopticon.py  puppet.py  python.py  ruby.py  rust.py  swift.py  typescript.py  wiki.py
navegador/intelligence/: __init__.py  community.py  docgen.py  doclink.py  nlp.py  search.py
navegador/mcp/: security.py  server.py
search/: search_index.json
tests/: test_analysis.py  test_ansible_parser.py  test_bash_parser.py  test_chef_enricher.py  test_churn.py  test_cicd.py  test_cli.py  test_cli_new_commands.py  test_cluster.py  test_cluster2.py  test_completions.py  test_config.py  test_context.py  test_coverage_boost.py  test_crossrepo.py  test_diff.py  test_diffgraph.py  test_doclink.py  test_doclink_semantic.py  test_drift.py  test_editor.py  test_enrichment_base.py  test_enrichment_django.py  test_enrichment_express.py  test_enrichment_fastapi.py  test_enrichment_laravel.py  test_enrichment_rails.py  test_enrichment_react.py  test_enrichment_react_native.py  test_enrichment_spring.py  test_enrichment_terraform.py  test_explorer.py  test_export.py  test_export_pagination.py  test_federation.py  test_federation_central.py  test_fossil_ingester.py  test_fossil_wiki_sync.py  test_go_parser.py  test_grammar_skip.py  (+47 more)
