[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navegador"
version = "1.1.0"
description = "AST + knowledge graph context engine for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "CONFLICT LLC" },
]
keywords = ["ast", "knowledge-graph", "code-analysis", "ai-agents", "mcp", "context-management", "falkordb", "go", "rust", "java", "typescript", "kotlin", "csharp", "php", "ruby", "swift", "c", "cpp", "terraform", "hcl", "puppet", "ansible", "chef", "bash", "iac"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Graph database
    "FalkorDB>=1.5.0",       # graph query client
    "falkordblite>=0.8.0",   # embedded SQLite-backed storage (zero-infra local)
    "redis>=7.4.0",          # redislite needs >=7.4 for Python 3.14 compatibility
    # AST parsing — multi-language via tree-sitter grammars
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    # MCP server
    "mcp>=1.0.0",
    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
redis = [
    # Use Redis-backed FalkorDB in production
    "redis>=5.0.0",
]
languages = [
    # Additional tree-sitter grammars (core 6 are in dependencies)
    "tree-sitter-kotlin>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-swift>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
]
iac = [
    # Infrastructure-as-Code tree-sitter grammars
    "tree-sitter-hcl>=1.2.0",
    "tree-sitter-puppet>=1.3.0",
    "tree-sitter-bash>=0.25.0",
    "pyyaml>=6.0",            # Ansible parser uses yaml.safe_load
]
llm = [
    # LLM provider SDKs (install the ones you use)
    "anthropic>=0.39.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.3.0",
    "pyyaml>=6.0",            # Ansible parser tests require yaml.safe_load
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0",
]
all = [
    "navegador[redis]",
    "navegador[languages]",
    "navegador[iac]",
    "navegador[llm]",
    "navegador[dev]",
    "navegador[docs]",
]

[project.urls]
Homepage = "https://navegador.dev"
Documentation = "https://navegador.dev"
Repository = "https://github.com/ConflictHQ/navegador"
Issues = "https://github.com/ConflictHQ/navegador/issues"

[project.scripts]
navegador = "navegador.cli.commands:main"

[tool.setuptools.packages.find]
include = ["navegador*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# HTML/JS template strings inevitably contain long lines
"navegador/explorer/templates.py" = ["E501"]
# Test inline literals and assertion chains often exceed 100 chars
"tests/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=navegador"
filterwarnings = [
    "ignore::ResourceWarning",
]
